--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  background-color: antiquewhite;
+
+}
+.logo{
+  display: flex;
+  gap: 10px;
+}
+
+
+.logo img{
+  width: 50px;
+  height: 40px;
+
+}
+ul{
+  display: flex;
+  list-style-type: none;
+  gap: 30px;
+}
+input{
+  background-color: antiquewhite ;
+}
+button{
+  background-color: antiquewhite ;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', sans-serif
+}
+.cartts img{
+  width: 350px;
+}
+.carts button{
+width: 80px;
+height: 20px;
+display: flex;
+}
+.carts{
+  border: 2px solid black;
+}
+
+.cartts{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 90px;
+}
+.modal{
+  background-color:rgba(0, 0, 0, 0.46);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: fixed;
+  right: 0;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.box_modal{
+  background-color: white;
+  width: 350px;;
+  height: 350px;
+ 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal button{
+  width: 20px;
+  height: 25px;
+  font-size: 20px;
+  
 }
